<?xml version="1.0" encoding="utf-8"?><!--
/*
** Original work Copyright 2013 The ChameleonOS Open Source Project
** Modified work Copyright 2013-2014 GermainZ@xda-developers.com
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>

    <!-- General strings -->
    <string name="app_name">Identiconizer!</string>
    <string name="dialog_ok">Done</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="button_select_all">Select all</string>
    <string name="button_deselect_all">Deselect all</string>

    <!-- Xposed & XposedMod.java -->
    <string name="xposed_description">Optional Xposed module. If enabled, Xposed will be used
        instead of Identiconizer\'s service to directly create identicons for new contacts.
    </string>
    <string name="xposed_error_title">Identiconizer! Xposed error</string>
    <string name="xposed_error_text">Xposed module error. Disable Identiconizer! in the Xposed
        Installer and reboot.
    </string>

    <!-- Main activity (IdenticonsSettings.java) -->
    <string name="identicons_title">@string/app_name</string>
    <string name="identicons_enabled_title">Automatic identicons</string>
    <string name="identicons_enabled_summary">Add identicons for new contacts</string>
    <!-- Identicon Appearance -->
    <string name="section_appearance">Identicons appearance</string>
    <string name="identicons_style_title">Style</string>
    <string name="identicons_size_title">Size</string>
    <string name="identicons_serif_title">Serif font</string>
    <string name="identicons_serif_summary">Use font with serif</string>
    <string name="identicons_length_title">Text length</string>
    <string name="identicons_bg_color_title">Background Color</string>
    <!-- Manage Identicons -->
    <string name="section_management">Manage</string>
    <string name="identicons_create_title">Create identicons</string>
    <string name="identicons_create_summary">For contacts with an identicon or no photo</string>
    <string name="identicons_remove_title">Remove identicons</string>
    <string name="identicons_remove_summary">For contacts with an identicon</string>
    <string name="identicons_contacts_list_title">Contacts list</string>
    <string name="identicons_contacts_list_summary">Manage identicons for wanted contacts</string>
    <!-- Other -->
    <string name="section_other">Other</string>
    <string name="identicons_contacts_ignore_visibility_title">Show all contacts</string>
    <string name="identicons_contacts_ignore_visibility_summary">Ignore group visibility and custom
        filters. Useful for DAVdroid users
    </string>
    <string name="about_title">About Identiconizer!</string>
    <!-- Shown in the "Identicon style" popup -->
    <string name="identicons_style_retro">Retro</string>
    <string name="identicons_style_contemporary">Contemporary</string>
    <string name="identicons_style_spirograph">Spirograph</string>
    <string name="identicons_style_dotmatrix">Dot matrix</string>
    <string name="identicons_style_gmail">Gmail</string>
    <!-- Used in the Holo ColorPicker dialog -->
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="opacity">Opacity</string>
    <string name="hex">Hex Color</string>
    <string name="apply">Apply</string>
    <string name="invalid_color">Invalid Color</string>

    <!-- IdenticonCreationService.java -->
    <string name="identicons_creation_service_running_title">Creating identicons</string>
    <string name="identicons_creation_service_running_summary"></string>
    <string name="identicons_creation_service_contact_summary">Processing %s</string>

    <!-- IdenticonRemovalService.java -->
    <string name="identicons_remove_service_running_title">Removing identicons</string>
    <string name="identicons_remove_service_running_summary"></string>
    <string name="identicons_remove_service_contact_summary">Processing photo %1$d/%2$d</string>
    <string name="identicons_remove_service_contact_summary_finishing">Tying up loose ends…</string>

    <!-- ContactsListActivity.java -->
    <string name="button_add">Create identicons for selected contacts</string>
    <string name="button_clear">Remove contact photos for selected contacts</string>

    <!-- Strings about SQL errors. Used in IdenticonCreationService.java & ErrorsListActivity.java -->
    <string name="sql_error_notification_title">Identiconizer! error</string>
    <string name="sql_error_notification_text">Failed to set contact photo for %1$d contacts. Tap
        for details.
    </string>
    <string name="sql_error_explanation">Errors usually occur if the image size is larger than 1M.
        Try choosing a smaller identicon size or a different style for these contacts.
    </string>
    <string name="sql_error">%1$s error: %2$s (photo size: %3$dK; name_raw_contact_id: %4$d)
    </string>
    <string name="sql_insert">Insert</string>
    <string name="sql_update">Update</string>

    <!-- About screen (IdenticonSettings.java) -->
    <string name="about">About</string>
    <string name="support_title">Support</string>
    <string name="support_summary">Identiconizer! by GermainZ</string>
    <string name="thanks">Thanks</string>
    <string name="chameleonos_title">ChameleonOS Open Source Project</string>
    <string name="chameleonos_summary">For code and resources used in this app</string>
    <string name="used_libraries">Used libraries</string>
    <string name="xposed_api_title">Xposed Bridge API</string>
    <string name="xposed_api_summary">By rovo89 and Tungstwenty</string>
    <string name="holo_colorpicker_title">Holo ColorPicker</string>
    <string name="holo_colorpicker_summary">By Lars Werkman</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="version">Version</string>

</resources>
