<?xml version="1.0" encoding="utf-8"?>
<!-- Original work Copyright (C) 2008 The Android Open Source Project
     Modified work Copyright 2013 The ChameleonOS Open Source Project
     Further modified work Copyright 2013-2014 GermainZ@xda-developers.com

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res/com.germainz.identiconizer"
                  android:title="@string/identicons_title">

    <SwitchPreference
        android:key="identicons_enabled"
        android:title="@string/identicons_enabled_title"
        android:summary="@string/identicons_enabled_summary"
        android:defaultValue="false"/>

    <PreferenceCategory android:title="@string/section_appearance">

        <com.germainz.identiconizer.ImageListPreference
            android:key="identicons_style"
            android:title="@string/identicons_style_title"
            android:entries="@array/identicons_style_entries"
            android:entryValues="@array/identicons_style_values"
            app:entryImages="@array/identicons_style_icons"
            android:defaultValue="0"/>

        <Preference
            android:key="identicons_bg_color"
            android:title="@string/identicons_bg_color_title"/>

        <SwitchPreference
            android:key="identicons_serif"
            android:title="@string/identicons_serif_title"
            android:summary="@string/identicons_serif_summary"/>

        <Preference
            android:key="identicons_length"
            android:title="@string/identicons_length_title"/>

        <Preference
            android:key="identicons_size"
            android:title="@string/identicons_size_title"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/section_management">

        <Preference
            android:key="identicons_create"
            android:title="@string/identicons_create_title"
            android:summary="@string/identicons_create_summary"/>

        <Preference
            android:key="identicons_remove"
            android:title="@string/identicons_remove_title"
            android:summary="@string/identicons_remove_summary"/>

        <Preference
            android:key="identicons_contacts_list"
            android:title="@string/identicons_contacts_list_title"
            android:summary="@string/identicons_contacts_list_summary"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/section_other">

        <CheckBoxPreference
            android:key="identicons_contacts_ignore_visibility"
            android:title="@string/identicons_contacts_ignore_visibility_title"
            android:summary="@string/identicons_contacts_ignore_visibility_summary"/>


        <Preference
            android:key="@string/about"
            android:title="@string/about_title">

            <intent
                android:action="com.germainz.identiconizer.SETTINGS_ABOUT"
                android:targetClass="com.germainz.identiconizer.IdenticonsSettings"
                android:targetPackage="com.germainz.identiconizer" />

        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
